--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <title>Classic Snake Game</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="stylesheets/application.css" />
+        <script data-main="scripts/main" src="scripts/require.js"></script>
     </head>
 <body>
     <h1>Classic Snake Game!</h1>
