Screw require js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <title>Classic Snake Game</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="stylesheets/application.css" />
-        <script data-main="scripts/main" src="scripts/require.js"></script>
     </head>
 <body>
     <h1>Classic Snake Game!</h1>
@@ -27,6 +26,11 @@
             <h2>Score: <span id="score" class="score">0</span></h2>
         </div>
     </div>
+    <script src="libs/jquery/jquery.js"></script>
+    <script src="libs/underscore/underscore.js"></script>
+    <script src="libs/snake/snake.js"></script>
+    <script src="libs/snake/food.js"></script>
+    <script src="libs/snake/gameengine.js"></script>
     <script src="//localhost:35729/livereload.js"></script>
 </body>
 </html>
